<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="380dp"
        android:layout_height="120dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:id="@+id/listChoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chore_name"
                android:layout_marginLeft="5dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/imageViewID"/>

            <TextView
                android:id="@+id/listAssignBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textStyle="italic"
                android:text="@string/assign_by"
                android:layout_below="@id/listChoreName"
                android:layout_toRightOf="@id/imageViewID"/>

            <TextView
                android:id="@+id/listAssignedTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textStyle="italic"
                android:layout_below="@id/listAssignBy"
                android:layout_toRightOf="@id/imageViewID"
                android:text="@string/assign_to" />

            <TextView
                android:id="@+id/listDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assign_date"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:contentDescription="@string/image_description"
                android:id="@+id/imageViewID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <Button
                android:id="@+id/listEditButtom"
                android:background="@mipmap/ic_mode_edit_black_24dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignBottom="@+id/listDeleteButtom"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="32dp" />

            <Button
                android:id="@+id/listDeleteButtom"
                android:layout_marginLeft="9dp"
                android:background="@mipmap/ic_delete_forever_black_24dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>